[project]
name = "tertius"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pyzmq>=26.0.0",
]

[tool.uv.sources]
orbis = { path = "../orbis", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.152.1",
    "orbis",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tertius"]

[tool.ruff.lint]
select = ["E402"]

[tool.mypy]
strict = true
